Fix footer copyright align
Before:

After:

--- a/assets/css/argon.css
+++ b/assets/css/argon.css
@@ -13742,7 +13742,6 @@ a.btn-icon-only {
 }
 
 .footer {
-    max-width: 75%;
     padding: 2.5rem 0;
     background: #f7fafc
 }
